--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,13 @@
 {
-    "name": "portfolio",
-    "version": 2,
-    "builds": [
+    "framework": "vite",
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
+    "installCommand": "npm install",
+    "devCommand": "npm run dev",
+    "rewrites": [
         {
-            "src": "package.json",
-            "use": "@vercel/static-build"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
